# fastapi-example

./: LICENSE
basic/: README.md  main.py  pyproject.toml
basic/app/: backend_pre_start.py  initial_data.py  main.py  models.py
basic/app/alembic/: env.py
basic/app/alembic/versions/: 10621244c0be_init_db.py
basic/app/api/: deps.py
basic/app/core/: config.py  db.py  logging.py  security.py
basic/configs/: logger.py  settings.py
basic/docs/: .vscode.md
basic/tests/app/core/: test_config.py  test_db.py
celery-example/: main.py  pyproject.toml  start_celery_flower.bat  start_celery_flower.sh  start_celery_worker.bat  start_celery_worker.sh
celery-example/configs/: celery_app.py  logger.py  settings.py
celery-example/tasks/: __init__.py  example_tasks.py
celery-example/tests/: test_settings.py
