[project]
name = "celery-example"
version = "0.1.0"
description = "FastAPI with Celery integration example"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.4.0",
    "fastapi>=0.128.0",
    "flower>=2.0.1",
    "loguru>=0.7.3",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "redis>=5.2.0",
    "ruff>=0.14.10",
    "uvicorn>=0.40.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
